Kubernetes/Ingress/Backend/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ingress-backend-service
  labels: 
    app: ingress-backend-app
spec:
  type: ClusterIP
  selector:
    app: ingress-backend-app
  ports:
    - port: 80
      targetPort: 80
